[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Grass/Grassleftspreadsheet.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Grass/grassspritesheet.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Grass.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "WaveLeft",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "WaveRight",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 9.70757, 15.3997 )

[node name="Grass" type="AnimatedSprite"]
position = Vector2( 5.11813, -10.3544 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
animation = "WaveRight"
script = ExtResource( 3 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( 0, -1.33333 )

[node name="Collider" type="CollisionShape2D" parent="Left"]
position = Vector2( -13.2666, 16.9271 )
shape = SubResource( 11 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 19.3333, -1.33333 )

[node name="Collider" type="CollisionShape2D" parent="Right"]
position = Vector2( -11.2666, 16.9271 )
shape = SubResource( 11 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Right_body_exited"]
